[package]
name = "recept"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
directories = "6.0.0"
notify = "8.2.0"
rfd = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] } 
toml = "0.9.10"
unicode-segmentation = "1.12.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
